fix: TokenList overflow & horizontal scrollbar
BREAKING CHANGE
Change TokenList margin-left from 66.4rem to 61.4rem

Before this fix TokenList popup was overflowing to the right w/ a horizontal scrollbar on the webapge

After the fix there is no more horizontal overflow

--- a/Components/TokenList/TokenList.module.css
+++ b/Components/TokenList/TokenList.module.css
@@ -4,7 +4,7 @@
     border-radius: .5rem;
     background-color: #1e1e1e;
     margin-top: 2rem;
-    margin-left: 66.4rem;
+    margin-left: 61.4rem;
     padding: 1rem;
     z-index: 1111111111;
 }
